--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -208,10 +208,11 @@
 \newcommand{\safe} {\mathit{safe}}
 \newcommand{\choice}[1]{\mathit{Choice_{#1}}}
 \newcommand{\neXt}{\mathit{X}}
-\newcommand{\Pal}[1]{\mathbf{[{#1}]}}
-\newcommand{\PalPos}[2]{\mathbf{\langle #1, #2 \rangle}\,}
-
-\newcommand{\SPalPos}[2]{\mathbf{\langle #1, #2,\mathbf{S} \rangle}\,}
+\newcommand{\Pal}[1]{\mathbf{[#1]}}
+\newcommand{\PalPos}[1]{\mathbf{\langle#1\rangle}}
+\newcommand{\SPal}[1]{\mathbf{[#1]^\mathcal{S}}}
+%	\stackrel{\mathbf{safe}}{\mathbf{[#1,#2]}}}
+\newcommand{\SPalPos}[1]{\mathbf{\langle#1\rangle^\mathcal{S}}}
 
 \def\firstcircle{(90:1.75cm) circle (2.5cm)}
 \def\secondcircle{(210:1.75cm) circle (2.5cm)}
