heads/tails action models

--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -35,7 +35,7 @@
 \usepackage{mathpartir}
 \usepackage{float}
 \usepackage{tikz}
-\usetikzlibrary{arrows,automata,positioning}
+\usetikzlibrary{arrows,automata,positioning,shapes.multipart}
 \usepackage{stmaryrd}
 
 %\usepackage{natbib}
