--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -48,36 +48,41 @@ A Kripke structure, called model $M$, is a tuple $\langle W, \Rel{k}^i, \Rel{b}^
 %$\mathbf{Definition}$. Action Structure.\\ 
 An action structure $\mathbf{A}$ is a tuple $\langle Actions,\chi_{k}^i, \chi_{b}^i, pre, pre_s, post, post_s \rangle$. It is a set of action tokens, sets of epistemic and doxastic relations on action tokens for agents, action pre- and post-conditions, and safe action pre- and post-conditions. 
 
-An action model captures the agents' subjective perspectives of an event's occurrence. For example, consider a situation in which Alice flips a coin and Bob calls whether it is \emph{heads} or \emph{tails}. Before Alice peeks to see what it is, the Action Model $\mathbf{A}$ looks like:
+An action model captures the agents' subjective perspectives of an event's occurrence. For example, consider a situation in which Alice flips a coin and Bob calls whether it is \emph{heads} or \emph{tails}. The action model imposes no precondition for occurring, represented by the value $\top$, and each action token's post-condition maps $\top$ to \emph{heads} or \emph{tails} respectively. Before Alice peeks to see what it is, the Action Model $\mathbf{A}$ looks like (omitting the safety pre- and post-conditions for simplicity):
 \begin{figure}[H]
 \begin{center}
-\begin {tikzpicture}[auto ,node distance =3 cm and 4cm ,on grid ,
+\begin {tikzpicture}[auto ,node distance =5 cm and 5cm ,on grid ,
 semithick ,
 state/.style ={ rectangle ,top color =white , bottom color = white ,
 	draw, text=black }]
-\node[state] (A) {\emph{heads}};
-\node[state] (B) [right =of A] {\emph{tails}};
+\node[state] (A) {\begin{tabular}{l} $pre$: $\top$ \\ $post$: \{$\top \rightarrow$ \emph{heads}\}
+	\end{tabular}};
+	\node[state] (B) [right =of A] {\begin{tabular}{l} $pre$: $\top$ \\ $post$: \{$\top \rightarrow$ \emph{tails}\}
+		\end{tabular}};
 \path[]
-(A) edge [bend right] node {\emph{Alice, Bob}} (B)
+(A) edge [bend right, below] node {\emph{Alice, Bob}} (B)
     edge [bend left, style=dashed] node {\emph{Alice, Bob}} (B)
-    edge [loop left, style=dashed] node {\emph{Alice, Bob}} (A)
-    (B) edge [loop right, style=dashed] node {\emph{Alice, Bob}} (B);
+    edge [loop left, style=dashed] node[right] {\emph{Alice, Bob}} (A)
+    (B) edge [loop right, style=dashed] node[left] {\emph{Alice, Bob}} (B);
 \end{tikzpicture}
 \end{center}
 \caption{Action Model for ``Alice flips a coin"}
+\label{fig: flip}
 \end{figure}
-We use rectangles for action tokens to distinguish them from possible worlds in Kripke Structures. The labels \emph{Alice, Bob} indicate the agents' epistemic (------) and doxastic ($---$) relations. When the relations lack direction, it indicates bi-directionality, and every action token has a looping epistemic relation to itself that we omit in order to keep the pictures simple. The action model for ``Alice peeks" is:
+We use rectangles for action tokens to distinguish them from possible worlds in Kripke Structures. The labels \emph{Alice, Bob} indicate the agents' epistemic (------) and doxastic ($---$) relations. When the relations lack direction, it indicates bi-directionality, and every action token has a looping epistemic relation to itself that we omit in order to keep the pictures simpler. In Figure~\ref{fig: flip}, neither Alice nor Bob knows whether the coin lands \emph{heads} or \emph{tails}, but the post-condition of the action is that the proposition expressing the state of the coin becomes \emph{heads} or \emph{tails}. The action model for ``Alice peeks" is:
 
 \begin{figure}[H]
 \begin{center}
-\begin {tikzpicture}[auto ,node distance =3 cm and 4cm ,on grid ,
-	semithick ,
+\begin {tikzpicture}[auto ,node distance =5 cm and 5cm ,on grid ,
+	semithick , 
 	state/.style ={ rectangle ,top color =white , bottom color = white ,
-		draw, text=black }]
-	\node[state] (A) {\emph{heads}};
-	\node[state] (B) [right =of A] {\emph{tails}};
+		draw, text=black}]
+	\node[state] (A) {\begin{tabular}{l} $pre$: $\top$ \\ $post$: \{$\top \rightarrow$ \emph{heads}\}
+	\end{tabular}};
+	\node[state] (B) [right =of A] {\begin{tabular}{l} $pre$: $\top$ \\ $post$: \{$\top \rightarrow$ \emph{tails}\}
+		\end{tabular}};
 	\path[]
-	(A) edge [bend right] node {\emph{Bob}} (B)
+	(A) edge [bend right, below] node {\emph{Bob}} (B)
 	edge [bend left, style=dashed] node {\emph{Bob}} (B)
 	edge [loop left, style=dashed] node {\emph{Bob}} (A)
 	(B) edge [loop right, style=dashed] node {\emph{Bob}} (B);
@@ -89,7 +94,6 @@ We use rectangles for action tokens to distinguish them from possible worlds in 
 
 In Figure~\ref{fig: peek}, the epistemic and doxastic relations for Alice have vanished. In the event that Alice peeks and sees \emph{heads}, she knows and believes that the coin landed \emph{heads}, and similarly for \emph{tails}. Bob, however, still considers it possible that the Alice peeked and saw \emph{heads} or that she peeked and saw \emph{tails}. However, Bob knows that Alice knows the coin's state.
  
-%include an action token for each possible scenario: in which Alice reads that each nominee has won, and u will consider each of these tokens to be possible. When I read the paper, I consider only one action token to be the one executed. This action structure represents that transition from one epistemic model, in which both of us considers all nominees the potential winner, to an epistemic model in which I know the winner and you still do not know the winner. We can think of the action structure $A$ as the general action ``Agent 1 reads the piece of paper" and the tokens as the specific actions ``Agent 1 reads that nominee \emph{n} has won the award."
 
 
 \subsubsection{Model Relation}
